2010-12-27 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules, packaging/rpm/amanda.spec.src: add missing
	   amservice entry to set perms at install time. Thanks to vpatton for
	   finding this.

2010-12-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Add FAILURE.

2010-12-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Use 'blocksize' to compute the
	  available space.

2010-12-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Fix parsing 'PARTIAL taper' line with no part.
	* perl/Amanda/DB/Catalog.pm: Ditto

2010-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Don't fail on trailing NUL bytes.

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* VERSION: 3.2.1

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssh-security.c: Use client_port.

2010-12-14  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Don't assume that gtar is configured to
	  use stdin/stdout as default archive.

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Don't crash if same-host doesn't match.

2010-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: inventory must return the same as
				       read_label.
	* server-src/amtape.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_disk.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_rait.pl: Fix for new inventory.

2010-12-11  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Don't assume that gtar is configured to
	  use stdin/stdout as default archive.

2010-12-12  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Use diskname, not devicename, as prefix
	  when checking for properties. Now works as documented in the ampgsql
	  man page.

2010-12-10  David Bogen <bogen@wisc.edu>
	* server-src/amoverview.pl: fix amoverview's argument parsing
